--- a/src/platform/editor/angular-monaco-editor/angular-monaco-editor.component.css
+++ b/src/platform/editor/angular-monaco-editor/angular-monaco-editor.component.css
@@ -1,9 +1,9 @@
 :host {
-    display: block;
-    height: 200px;
-  }
+  display: block;
+  height: 200px;
+}
 
-  .editor-container {
-    width: 100%;
-    height: 98%;
-  }
+.editor {
+  width: 100%;
+  height: 98%;
+}
