--- a/src/platform/editor/angular-monaco-editor/angular-monaco-editor.component.html
+++ b/src/platform/editor/angular-monaco-editor/angular-monaco-editor.component.html
@@ -1,1 +1,2 @@
-<div class="editor-container" #editorContainer></div>
+<label>angular monaco code editor component</label>
+<div class="editor" #codeEditor></div>
