[Add]Support multi angular-monaco-editor instances in one html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,7 @@
     <button (click)="setCode()">Set code in the app component</button>
 </div>
 
+<div class="editorPanel2">
+    <angular-monaco-editor [(ngModel)]="jsonCode" ></angular-monaco-editor>
+</div>
+
