formatOnType option not work

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,11 @@
 .editorPanel{
     display: block;
     position: absolute;
+    top: 0px;
     bottom: 0px;
     left: 0px;
     right: 0px;
+}
+.editorPanel .customMonacoEditor { /*set automaticLayout*/
+    height: calc(100vh - 0px);
 }
