Extract public operations to base class from the angular monaco editor component

--- a/demo/src/app/app.component.css
+++ b/demo/src/app/app.component.css
@@ -7,5 +7,5 @@
     right: 0px;
 }
 .editorPanel .customMonacoEditor { /*set automaticLayout*/
-    height: calc(100vh - 0px);
+    height: 200px
 }
