--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="editorPanel">
     <div>code:{{code}}</div>
-    <angular-monaco-editor class="customMonacoEditor" [options]="options" [(ngModel)]="code" (onInit)="onInitHandler($event)"></angular-monaco-editor>
+    <angular-monaco-editor class="customMonacoEditor" [options]="options" [(ngModel)]="jsonCode" (onInit)="onInitHandler($event)"></angular-monaco-editor>
 </div>
