Explore to get editor's state after blured.

--- a/demo/src/app/model-init/model-init-editor.component.html
+++ b/demo/src/app/model-init/model-init-editor.component.html
@@ -4,7 +4,6 @@
   </div>
   
   <div class="editorPanel">
-    <angular-monaco-editor class="customMonacoEditor" [options]="options"[(ngModel)]="jsonCode" [model]="model" (onInit)="onInitHandler($event)"
-        (onTouched)="onTouchedHandler($event)" (onChange)="onChangeHandler($event)"></angular-monaco-editor>
+    <angular-monaco-editor class="customMonacoEditor" [options]="options" [(ngModel)]="jsonCode" [model]="model" (onInit)="onInitHandler($event)"></angular-monaco-editor>
   </div>
 </div>
